--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.4",
     "morgan": "^1.9.1",
