--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.8.4",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "sharp": "^0.23.4"
   },
